# fmengine-jax

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: Makefile  mkdocs.yml
docs/docs/: index.md
docs/source/: conf.py  index.rst
docs/source/_autosummary/: fmtrainer.checkpoint.rst  fmtrainer.dataloader.rst  fmtrainer.modelling.rst  fmtrainer.rst  fmtrainer.trainer.rst
examples/: pretrain_gpt2.py  pretrain_gpt2_c4.py  pretrain_gpt2_sif.sh  pretrain_gptj.py  pretrain_llama.py  print_model_summary.py
examples/pretraining/: pretrain_gpt2.py  pretrain_gpt2_sif.sh  pretrain_gptj.py
examples/utils/: print_model_summary.py
fmengine/modelling/: __init__.py  _base.py
fmengine/modelling/common/: attn_utils.py  embedding.py  resnet.py  unet.py
fmengine/modelling/common/unet/: unet_2d_blocks.py
fmengine/modelling/image/: controlnet.py  resnet.py
fmengine/modelling/image/unet/: unet_2d_blocks.py
fmengine/modelling/language/: output.py
fmengine/modelling/language/gptj/: gptj_config.py
fmengine/parallelism/: partition.py
fmengine/trainer/: _base.py  trainer.py
fmengine/utils/: outputs.py
fmtrainer/dataloader/: _base.py  jsonl_reader.py
fmtrainer/modelling/common/: __init__.py  attn_utils.py
fmtrainer/modelling/language/gpt2/: gpt2_config.py  gpt2_model.py
fmtrainer/modelling/language/gptj/: gptj_config.py  gptj_model.py
fmtrainer/nn/: optimizers.py
fmtrainer/parallelism/: partition.py
fmtrainer/trainer/: _base.py  distributed.py  hyperparams.py  trainer.py
notebooks/: playground.ipynb
(+2 files in other folders)
